[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Enemy/Boss.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy/Boss_body.gd" type="Script" id=2]
[ext_resource path="res://Graphic/Boss/Boss_main_body.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Enemy/Rec_gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemy/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Graphic/Boss/Boss_rot_gun.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Enemy/Sprite.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Enemy/Rot_gun_weapon.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Bullets/Bullet_rec_1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sounds/laser-soundr.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/explosion_1.wav" type="AudioStream" id=11]
[ext_resource path="res://Scenes/Enemy/Lazer.gd" type="Script" id=12]
[ext_resource path="res://Graphic/Boss/lazer_start_tex_01.png" type="Texture" id=13]
[ext_resource path="res://Graphic/Boss/lazer_tex_03.png" type="Texture" id=14]
[ext_resource path="res://Sounds/lazers/laser_beam_01.wav" type="AudioStream" id=15]
[ext_resource path="res://Graphic/Boss/particle_tex_01.png" type="Texture" id=16]
[ext_resource path="res://Graphic/Boss/light_01.png" type="Texture" id=17]
[ext_resource path="res://Graphic/Boss/Bar2.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Enemy/TextureProgress.gd" type="Script" id=19]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -90.7307, 70.2477, 0, 0, 0, 0, 84.8651, 70.0532, 0, 0, 0, 0, -90.7767, 70.1556 )
}

[sub_resource type="Animation" id=2]

resource_name = "Enter"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 300, -400 ), Vector2( 300, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Container/TextureProgress:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 160.0 ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 136.87

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 29.5371

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 33.3333, 16.6668 )

[sub_resource type="Gradient" id=6]

offsets = PoolRealArray( 0.736842, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]

flags = 4
gradient = SubResource( 6 )
width = 2048

[sub_resource type="ParticlesMaterial" id=8]

render_priority = 0
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 10, 10, 1 )
flag_align_y = false
flag_rotate_y = true
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 50.0
tangential_accel_random = 0.0
damping = 30.0
damping_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 2.0
scale_random = 0.0
color_ramp = SubResource( 7 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Damping", "Scale" ]

[node name="Boss" type="Node" index="0" groups=[
"boss",
]]

script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="." index="0"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 463.926, 187.374 )
curve = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SF_path" type="PathFollow2D" parent="Path2D" index="0"]

position = Vector2( -3.32528, 70.1509 )
rotation = -0.00110849
offset = 87.4853
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]

[node name="Boss_body" type="KinematicBody2D" parent="." index="1"]

position = Vector2( 300, -400 )
scale = Vector2( 1.2, 1.2 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
speed_sw = 200
boss_state = 5
speed_rot = 2
radius = 500

[node name="Animation" type="AnimationPlayer" parent="Boss_body" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/Enter = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_body" index="1"]

visible = false
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Main_body" type="Sprite" parent="Boss_body" index="2"]

scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Rec_gun" parent="Boss_body" index="3" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 88.3758, 64.7355 )
if_shake = true

[node name="Shoot_audio" parent="Boss_body/Rec_gun" index="3"]

pitch_scale = 1.0

[node name="DeathSound" parent="Boss_body/Rec_gun" index="5"]

pitch_scale = 1.0

[node name="Rec_gun2" parent="Boss_body" index="4" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( -89.1238, 64.7355 )
if_shake = true

[node name="Shoot_audio" parent="Boss_body/Rec_gun2" index="3"]

pitch_scale = 1.0

[node name="DeathSound" parent="Boss_body/Rec_gun2" index="5"]

pitch_scale = 1.0

[node name="Rot_gun" parent="Boss_body" index="5" instance=ExtResource( 5 )]

rotation = -3.88051e-010
tell_if_dmg_taken = true
positioning = false
if_shake = true
max_live = 140

[node name="Sprite" parent="Boss_body/Rot_gun" index="0"]

position = Vector2( 0, -19.1667 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
offset = Vector2( 0, 40 )
script = ExtResource( 7 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CollisionShape2D" parent="Boss_body/Rot_gun" index="1"]

visible = false
position = Vector2( 4.22006e-006, -18.3333 )
rotation = -0.00464046
shape = SubResource( 4 )

[node name="Rot_gun_weapon" type="Node" parent="Boss_body/Rot_gun" index="3"]

script = ExtResource( 8 )
gun_rotation_speed = 100
bullet = ExtResource( 9 )

[node name="Shoot_time" type="Timer" parent="Boss_body/Rot_gun/Rot_gun_weapon" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Sbs_time" type="Timer" parent="Boss_body/Rot_gun/Rot_gun_weapon" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="Boss_body/Rot_gun/Rot_gun_weapon" index="2"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Lelz"
area_mask = 1

[node name="DeathSound" parent="Boss_body/Rot_gun" index="4"]

stream = ExtResource( 11 )
pitch_scale = 1.0

[node name="SF_time" type="Timer" parent="Boss_body" index="6"]

process_mode = 1
wait_time = 5.3
one_shot = false
autostart = false

[node name="LZ_time" type="Timer" parent="Boss_body" index="7"]

process_mode = 1
wait_time = 5.2
one_shot = false
autostart = false

[node name="Lazer" type="Area2D" parent="Boss_body" index="8" groups=[
"lazer",
]]

light_mask = 0
position = Vector2( 0, 75.0002 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 12 )
_sections_unfolded = [ "Transform", "Visibility" ]
lazer_speed = 300.0

[node name="LazerStartSprite" type="Sprite" parent="Boss_body/Lazer" index="0"]

visible = false
texture = ExtResource( 13 )
offset = Vector2( 0, -16.6667 )
_sections_unfolded = [ "Transform" ]

[node name="LazerSprite" type="Sprite" parent="Boss_body/Lazer" index="1"]

visible = false
light_mask = 4
position = Vector2( 0, -16.6668 )
scale = Vector2( 1, 1.04167 )
texture = ExtResource( 14 )
offset = Vector2( 0, 15.9999 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 32 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_body/Lazer" index="2"]

visible = false
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Sound" type="AudioStreamPlayer" parent="Boss_body/Lazer" index="3"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "lazer"

[node name="Particles2D" type="Particles2D" parent="Boss_body/Lazer" index="4"]

emitting = false
amount = 60
lifetime = 4.0
one_shot = false
preprocess = 0.0
speed_scale = 8.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 8 )
texture = ExtResource( 16 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="Light2D" type="Light2D" parent="Boss_body/Lazer" index="5"]

position = Vector2( 0, 363.166 )
scale = Vector2( 1, 12.349 )
enabled = false
editor_only = false
texture = ExtResource( 17 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 0.537354, 0, 0.554688, 1 )
energy = 0.5
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 5
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Transform" ]

[node name="Container" type="CenterContainer" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -300.0
margin_right = 300.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="TextureProgress" type="TextureProgress" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 12.0
margin_right = 400.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 160.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 18 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 19 )
_sections_unfolded = [ "Radial Fill", "Rect", "Textures", "Visibility" ]

[connection signal="animation_finished" from="Boss_body/Animation" to="Boss_body" method="_on_Animation_animation_finished"]

[connection signal="dmg_taken" from="Boss_body/Rec_gun" to="Container/TextureProgress" method="_on_Rot_gun_dmg_taken"]

[connection signal="dmg_taken" from="Boss_body/Rec_gun2" to="Container/TextureProgress" method="_on_Rot_gun_dmg_taken"]

[connection signal="dmg_taken" from="Boss_body/Rot_gun" to="Container/TextureProgress" method="_on_Rot_gun_dmg_taken"]

[connection signal="timeout" from="Boss_body/Rot_gun/Rot_gun_weapon/Shoot_time" to="Boss_body/Rot_gun/Rot_gun_weapon" method="_on_Shoot_time_1_timeout"]

[connection signal="timeout" from="Boss_body/SF_time" to="Boss_body" method="_on_SF_time_timeout"]

[connection signal="timeout" from="Boss_body/LZ_time" to="Boss_body" method="_on_LZ_time_timeout"]

[connection signal="rip_boss" from="Container/TextureProgress" to="." method="_on_TextureProgress_rip_boss"]


[editable path="Boss_body/Rec_gun"]
[editable path="Boss_body/Rec_gun2"]
[editable path="Boss_body/Rot_gun"]
